<resources>
    <string name="app_name">AppBoraBora</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_activity_home_navigation">Bodega BoraBora</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="username">Usuario</string>
    <string name="contra">Contraseña</string>
    <string name="sesion">Iniciar Sesión</string>
    <string name="registropregunta">¿No tienes cuenta?</string>
    <string name="registropregunta2"><u>Regístrate</u></string>
    <string name="registro">Regístrate</string>
    <string name="logintitulo">Iniciar sesión</string>
    <string name="pregunta">¿Olvidaste tu contraseña?</string>
    <string name="titulo1">Información Personal</string>
    <string name="nombres">Nombres</string>
    <string name="apellidos">Apellidos</string>
    <string name="documento">Documento de Identidad</string>
    <string name="celular">Número de celular</string>
    <string name="titulo2">Seguridad</string>
    <string name="correo">Correo electronico</string>
    <string name="condiciones">Condiciones de uso</string>
    <string name="condicion1">Autorizo al envió de promociones, así como informes de productos de BoraBora.</string>
    <string name="condicion2">Acepto el tratamiento de mis datos personales bajo condiciones de BoraBora.</string>
    <string name="btncrear">CREAR</string>
    <string name="n_contra">Confirme Nueva Contraseña</string>
    <string name="Contras">Ingrese Nueva Contraseña</string>
    <string name="btnactualizarcontra">Actualizar</string>
    <string name="titulocatalogo">Catalogo</string>
    <string name="grupo1">Frutas y verduras</string>
    <string name="grupo2">Cereales y granos</string>
    <string name="grupo3">Bebidas</string>
    <string name="grupo4">Carnes y embutidos</string>
    <string name="grupo5">Snacks</string>
    <string name="grupo6">Lacteos</string>
    <string name="añadir">Añadir más productos</string>
    <string name="subtotal">Subtotal</string>
    <string name="subprecio">S/ 0.0</string>
    <string name="igv">IGV</string>
    <string name="montototal">Total</string>
    <string name="metodo">Método de Pago</string>
    <string name="pago">Clic aquí para seleccionar tu \nmétodo de pago</string>
    <string name="carrito">Carrito de Compra</string>
    <string name="compra">COMPRA</string>

    <string name="menu_catalogo">Catalogo</string>
    <string name="menu_dashboard">Dashboard</string>
    <string name="menu_compra">Mi Carrito</string>
    <string name="men_historial_compra">Historial Compra</string>
    <string name="menu_perfil">Perfil</string>
    <string name="menu_admin_prod">Administrar Productos</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="titulohc">Historial de Compras</string>
    <string name="perfil">Editar Perfil</string>
    <string name="txtNroCompra">Compra Nº:</string>
    <string name="txtFCompra">Fecha de compra:</string>
    <string name="txtMPago">Método de pago:</string>
    <string name="txtTotal">Total:</string>
    <string name="titulodhc">Mi compra</string>
    <string name="metodopago">Método de Pago</string>
    <string name="tarjeta">Tarjeta de Credito</string>
    <string name="TIENDA">Recojo en tienda</string>
    <string name="infotarjecta">Ingrese la Información de su Tarjeta</string>
    <string name="btnaceptar">Aceptar</string>
    <string name="stringContacto">Contacto</string>
    <string name="valFinalizarCompra">Finalizar Compra</string>
    <string name="cuenta">Crear Cuenta</string>
    <string name="mensajeBienvenidad">!Qué bueno tenerte de vuelta!</string>
    <string name="title_activity_admin">admin</string>


    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="descripcion_calendario">Calendario</string>

    <!-- mensajes retrofit -->
    <string name="invalid_user_error">Error: Usuario no válido</string>
    <string name="unknown_error">Error desconocido</string>
    <string name="error_code_status">Error: Código %1$d - %2$s</string>
    <string name="network_error">Error de red</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="valDatos">Ingrese sus datos</string>
    <string name="welcome">"¡Hola! "</string>
    <string name="calCelular">Celular</string>
    <string name="valDni">DNI</string>
    <string name="valUsername">Username</string>
    <string name="title_activity_test2">test2</string>
</resources>