<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/dashboard"
            android:icon="@drawable/baseline_space_dashboard_24"
            android:title="@string/menu_dashboard" />
        <item
            android:id="@+id/catalogo"
            android:icon="@drawable/baseline_format_list_bulleted_24"
            android:title="@string/menu_catalogo" />
        <item android:title="Compra">
            <menu>
                <item android:id="@+id/compra"
                      android:icon="@drawable/baseline_shopping_cart_24"
                      android:title="@string/menu_compra"/>
                <item
                    android:id="@+id/historialCompra"
                    android:icon="@drawable/baseline_history_24"
                    android:title="@string/men_historial_compra" />
            </menu>
        </item>
        <item android:title="Información">
        <menu>
        <item
            android:id="@+id/contacto"
            android:icon="@drawable/baseline_person_24"
            android:title="@string/stringContacto" />
        </menu>
        </item>

        <item android:title="Sesión">
            <menu>
                <item
                    android:id="@+id/activity_login"
                    android:icon="@drawable/baseline_login_24"
                    android:title="Iniciar sesión" />
                <item
                    android:id="@+id/perfil"
                    android:icon="@drawable/baseline_person_outline_24"
                    android:title="@string/menu_perfil" />
                <item
                    android:id="@+id/mainActivity"
                    android:icon="@drawable/baseline_logout_24"
                    android:title="Cerrar sesión" />
            </menu>
        </item>
    </group>
</menu>