<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/bg_tienda"
    tools:context=".view.activities.RegisterUser">


        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="351dp"
            android:layout_height="615dp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="45dp"
            android:background="@drawable/borde_small"
            android:orientation="vertical"
            android:padding="35dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="281dp"
                android:layout_height="559dp">

                <EditText
                    android:id="@+id/t_username"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/valUsername"
                    android:inputType="textEmailAddress"
                    android:minHeight="48dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/color_hint"
                    android:textCursorDrawable="@drawable/cursor_color"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/t_celular" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-black"
                    android:text="@string/titulo1"
                    android:textAlignment="viewStart"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/t_nom"
                    android:layout_width="276dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="4dp"
                    android:ems="10"
                    android:hint="@string/nombres"
                    android:inputType="text"
                    android:minHeight="48dp"
                    android:textColorHint="@color/color_hint"
                    android:textCursorDrawable="@drawable/cursor_color"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView2"
                    android:textColor="@color/black" />

                <EditText
                    android:id="@+id/t_apellido"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/apellidos"
                    android:inputType="text"
                    android:minHeight="48dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/color_hint"
                    android:textCursorDrawable="@drawable/cursor_color"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/t_nom" />

                <EditText
                    android:id="@+id/t_dni"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/documento"
                    android:inputType="phone"
                    android:minHeight="48dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/color_hint"
                    android:textCursorDrawable="@drawable/cursor_color"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/t_apellido" />

                <EditText
                    android:id="@+id/t_passw"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/contra"
                    android:inputType="text"
                    android:minHeight="48dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/color_hint"
                    android:textCursorDrawable="@drawable/cursor_color"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/t_correo" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:fontFamily="sans-serif-black"
                    android:text="@string/titulo2"
                    android:textAlignment="viewStart"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/t_username" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-black"
                    android:text="@string/condiciones"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/t_passw" />

                <LinearLayout
                    android:id="@+id/linearLayout2"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_marginTop="4dp"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView4">

                    <CheckBox
                        android:id="@+id/cbcondicion1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:minHeight="48dp"
                        android:text="@string/condicion2"
                        android:textColor="@color/material_dynamic_neutral30"
                        android:textSize="11sp"
                        android:textStyle="bold" />

                    <CheckBox
                        android:id="@+id/cbcondicion2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/condicion1"
                        android:textColor="@color/material_dynamic_neutral30"
                        android:textSize="11sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <Button
                    android:id="@+id/btncrear"
                    android:layout_width="264dp"
                    android:layout_height="48dp"
                    android:layout_marginTop="8dp"
                    android:backgroundTint="@color/btn_purple"
                    android:text="@string/btncrear"
                    android:textColor="@color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

                <EditText
                    android:id="@+id/t_celular"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/celular"
                    android:inputType="phone"
                    android:minHeight="48dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/color_hint"
                    android:textCursorDrawable="@drawable/cursor_color"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/t_dni" />

                <EditText
                    android:id="@+id/t_correo"
                    android:layout_width="277dp"
                    android:layout_height="41dp"
                    android:layout_marginTop="4dp"
                    android:ems="10"
                    android:hint="@string/correo"
                    android:inputType="textEmailAddress"
                    android:minHeight="48dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/color_hint"
                    android:textCursorDrawable="@drawable/cursor_color"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView3" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>